--- a/ModalComp/Shared/NavMenu.razor
+++ b/ModalComp/Shared/NavMenu.razor
@@ -29,16 +29,43 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Validation
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="#" @onclick="ToggleSubMenu">
+                <span class="oi @Signal" aria-hidden="true"></span> Token 
+            </NavLink>
+        </li>
+        @if ( TokenValidation)
+        {
+             <li class="nav-item px-3" style="background-color: black" >
+                <NavLink class="nav-link" href="/Token/Generate">
+                    <span aria-hidden="true"> --- > Generate </span> 
+                </NavLink>
+            </li>
+            <li class="nav-item px-3" style="background-color: black">
+                <NavLink class="nav-link" href="/Token/Validate">
+                    <span aria-hidden="true"> --- > Validate </span> 
+                </NavLink>
+            </li>           
+        }
     </ul>
 </div>
 
 @code {
     private bool collapseNavMenu = true;
+    private bool TokenValidation = false;
+    private string Signal = "oi-plus";
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    private void ToggleSubMenu()
+    {
+        TokenValidation = !TokenValidation;
+        Signal = TokenValidation ? "oi-minus" : "oi-plus";
     }
 }
